--- a/.github/workflows/iwvg-devops-martin-victor-actions.yml
+++ b/.github/workflows/iwvg-devops-martin-victor-actions.yml
@@ -14,3 +14,14 @@ jobs:
           java-version: 17
       - name: Unit & Integration Tests
         run: mvn -B verify
+      - name: Sonar
+          if: success()
+          run: >
+            mvn -B verify -X -DskipTests sonar:sonar
+            -Dsonar.projectKey=victormartindz_iwvg-devops-martin-victor
+            -Dsonar.organization=victormartindz
+            -Dsonar.host.url=https://sonarcloud.io
+            -Dsonar.login=$SONAR_TOKEN
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
